<resources>
    <string name="app_name">SarahKhan-TemperatureConverter</string>
    <string name="fahrenheit_button">Fahrenheit</string>
    <string name="celsius_button">Celsius</string>
    <string name="fahrenheit_temp">0.0</string>
    <string name="celsius_temp">0.0</string>
    <string name="interesting_message">Interesting Message</string>
    <string name="degree_string">.0°</string>
    <string name="warmer_message">I wish it were warmer</string>
    <string name="colder_message">I wish it were colder</string>
</resources>